--- a/package.json
+++ b/package.json
@@ -54,11 +54,12 @@
     "@types/micromatch": "4.0.2",
     "@types/node": "18.11.17",
     "@types/yargs": "17.0.17",
-    "@typescript-eslint/eslint-plugin": "5.47.0",
-    "@typescript-eslint/parser": "5.47.0",
+    "@typescript-eslint/eslint-plugin": "5.47.1",
+    "@typescript-eslint/parser": "5.47.1",
     "@willbooster/eslint-config-ts": "10.0.8",
     "@willbooster/prettier-config": "9.1.1",
     "@willbooster/renovate-config": "9.4.2",
+    "@yarnpkg/core": "4.0.0-rc.34",
     "conventional-changelog-conventionalcommits": "5.0.0",
     "esbuild": "0.16.10",
     "esbuild-register": "3.4.2",
