--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "prettier": "2.8.1",
     "semantic-release": "19.0.5",
     "sort-package-json": "2.1.0",
+    "type-fest": "3.5.0",
     "typescript": "4.9.4"
   },
   "packageManager": "yarn@4.0.0-rc.34",
