--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "esModuleInterop": true,
     "importHelpers": false,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "dist",
     "resolveJsonModule": true,
@@ -15,5 +15,5 @@
     "target": "esnext",
     "typeRoots": ["./node_modules/@types", "./@types"]
   },
-  "include": ["src/**/*", "__tests__/**/*", "scripts/**/*"]
+  "include": ["__tests__/**/*", "scripts/**/*", "src/**/*"]
 }
