--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@octokit/core": "4.1.0",
+    "@willbooster/shared-lib": "1.7.0",
     "deepmerge": "4.2.2",
     "dotenv": "16.0.3",
     "dotenv-cli": "6.0.0",
