--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "github:WillBooster/wbfy",
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
-  "bin": "./bin/index.cjs",
+  "bin": "./bin/wbfy",
   "files": [
     "bin/",
     "dist/"
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@octokit/core": "4.1.0",
-    "@willbooster/shared-lib": "1.7.0",
+    "@willbooster/shared-lib": "1.7.1",
     "deepmerge": "4.2.2",
     "dotenv": "16.0.3",
     "dotenv-cli": "6.0.0",
@@ -54,14 +54,14 @@
     "@types/lodash.clonedeep": "4.5.7",
     "@types/micromatch": "4.0.2",
     "@types/node": "18.11.18",
-    "@types/yargs": "17.0.18",
+    "@types/yargs": "17.0.19",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
     "@willbooster/eslint-config-ts": "10.0.8",
     "@willbooster/prettier-config": "9.1.1",
     "@willbooster/renovate-config": "9.5.0",
     "@yarnpkg/core": "4.0.0-rc.34",
-    "build-ts": "3.1.3",
+    "build-ts": "3.2.1",
     "conventional-changelog-conventionalcommits": "5.0.0",
     "eslint": "8.31.0",
     "eslint-config-prettier": "8.6.0",
@@ -78,7 +78,7 @@
     "prettier": "2.8.1",
     "semantic-release": "19.0.5",
     "sort-package-json": "2.1.0",
-    "type-fest": "3.5.0",
+    "type-fest": "3.5.1",
     "typescript": "4.9.4",
     "vitest": "0.26.3"
   },
