--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "repository": "github:WillBooster/wbfy",
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
-  "bin": "./bin/index.cjs",
+  "bin": "./bin/wbfy",
   "files": [
     "bin/",
     "dist/"
   ],
   "scripts": {
-    "build": "node esbuild.js",
+    "build": "build-ts build -t app",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
     "postinstall": "husky install",
@@ -21,9 +21,9 @@
     "postpack": "pinst --enable",
     "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,js,json,json5,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "release": "yarn build && semantic-release",
-    "start": "dotenv -- node -r esbuild-register src",
+    "start": "dotenv -- build-ts run src --",
     "start-prod": "yarn build && yarn wbfy",
-    "test": "yarn jest --color __tests__",
+    "test": "vitest __tests__",
     "test/ci-setup": "cd .. && pwd && rm -Rf test-fixtures-for-wbfy && git clone https://github.com/WillBooster/test-fixtures-for-wbfy.git",
     "typecheck": "tsc --noEmit --Pretty"
   },
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@octokit/core": "4.1.0",
+    "@willbooster/shared-lib": "1.7.1",
     "deepmerge": "4.2.2",
     "dotenv": "16.0.3",
     "dotenv-cli": "6.0.0",
@@ -40,7 +41,7 @@
     "js-yaml": "4.1.0",
     "libsodium-wrappers": "0.7.10",
     "lodash.clonedeep": "4.5.0",
-    "minimal-promise-pool": "2.1.1",
+    "minimal-promise-pool": "2.1.2",
     "simple-git": "3.15.1",
     "yargs": "17.6.2"
   },
@@ -53,24 +54,23 @@
     "@types/lodash.clonedeep": "4.5.7",
     "@types/micromatch": "4.0.2",
     "@types/node": "18.11.18",
-    "@types/yargs": "17.0.18",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.47.1",
+    "@types/yargs": "17.0.19",
+    "@typescript-eslint/eslint-plugin": "5.48.0",
+    "@typescript-eslint/parser": "5.48.0",
     "@willbooster/eslint-config-ts": "10.0.8",
     "@willbooster/prettier-config": "9.1.1",
-    "@willbooster/renovate-config": "9.4.2",
+    "@willbooster/renovate-config": "9.5.0",
     "@yarnpkg/core": "4.0.0-rc.34",
+    "build-ts": "3.2.1",
     "conventional-changelog-conventionalcommits": "5.0.0",
-    "esbuild": "0.16.12",
-    "esbuild-register": "3.4.2",
-    "eslint": "8.30.0",
-    "eslint-config-prettier": "8.5.0",
+    "eslint": "8.31.0",
+    "eslint-config-prettier": "8.6.0",
     "eslint-import-resolver-typescript": "3.5.2",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-sort-class-members": "1.16.0",
     "eslint-plugin-sort-destructure-keys": "1.4.0",
     "eslint-plugin-unicorn": "45.0.2",
-    "husky": "8.0.2",
+    "husky": "8.0.3",
     "jest": "29.3.1",
     "lint-staged": "13.1.0",
     "micromatch": "4.0.5",
@@ -78,8 +78,9 @@
     "prettier": "2.8.1",
     "semantic-release": "19.0.5",
     "sort-package-json": "2.1.0",
-    "type-fest": "3.5.0",
-    "typescript": "4.9.4"
+    "type-fest": "3.5.1",
+    "typescript": "4.9.4",
+    "vitest": "0.26.3"
   },
   "packageManager": "yarn@4.0.0-rc.34",
   "engines": {
