--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 dist/
 temp/
 Icon[]
+!.keep
 # Created by https://www.toptal.com/developers/gitignore/api/windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows
 
