--- a/.prettierignore
+++ b/.prettierignore
@@ -26,6 +26,7 @@ test-fixtures/
 dist/
 temp/
 Icon[]
+!.keep
 # Created by https://www.toptal.com/developers/gitignore/api/windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows
 
