--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dist/"
   ],
   "scripts": {
-    "build": "build-ts build -t app",
+    "build": "build-ts app",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
     "postinstall": "husky install",
@@ -31,21 +31,21 @@
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
     "@octokit/core": "4.2.0",
-    "@willbooster/shared-lib": "1.7.1",
+    "@willbooster/shared-lib": "1.8.1",
     "deepmerge": "4.2.2",
     "dotenv": "16.0.3",
-    "dotenv-cli": "6.0.0",
+    "dotenv-cli": "7.0.0",
     "globby": "13.1.3",
     "js-yaml": "4.1.0",
     "libsodium-wrappers": "0.7.10",
     "lodash.clonedeep": "4.5.0",
-    "minimal-promise-pool": "2.1.2",
+    "minimal-promise-pool": "2.1.4",
     "simple-git": "3.16.0",
     "yargs": "17.6.2"
   },
   "devDependencies": {
     "@types/eslint": "8.4.10",
-    "@types/jest": "29.2.6",
+    "@types/jest": "29.4.0",
     "@types/js-yaml": "4.0.5",
     "@types/libsodium-wrappers": "0.7.10",
     "@types/lodash.clonedeep": "4.5.7",
@@ -58,7 +58,7 @@
     "@willbooster/prettier-config": "9.1.1",
     "@willbooster/renovate-config": "9.5.0",
     "@yarnpkg/core": "4.0.0-rc.36",
-    "build-ts": "3.2.6",
+    "build-ts": "5.0.0",
     "conventional-changelog-conventionalcommits": "5.0.0",
     "eslint": "8.32.0",
     "eslint-config-prettier": "8.6.0",
@@ -68,17 +68,17 @@
     "eslint-plugin-sort-destructure-keys": "1.4.0",
     "eslint-plugin-unicorn": "45.0.2",
     "husky": "8.0.3",
-    "jest": "29.3.1",
+    "jest": "29.4.1",
     "lint-staged": "13.1.0",
     "micromatch": "4.0.5",
     "pinst": "3.0.0",
     "prettier": "2.8.3",
-    "semantic-release": "20.0.2",
+    "semantic-release": "20.1.0",
     "sort-package-json": "2.2.0",
     "ts-node": "10.9.1",
     "type-fest": "3.5.3",
     "typescript": "4.9.4",
-    "vitest": "0.27.2"
+    "vitest": "0.28.3"
   },
   "packageManager": "yarn@4.0.0-rc.36",
   "engines": {
