--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
   "type": "module",
-  "bin": "./bin/wbfy.mjs",
+  "bin": "./bin/wbfy.js",
   "files": [
     "bin/",
     "dist/"
@@ -52,8 +52,8 @@
     "@types/micromatch": "4.0.2",
     "@types/node": "18.14.0",
     "@types/yargs": "17.0.22",
-    "@typescript-eslint/eslint-plugin": "5.52.0",
-    "@typescript-eslint/parser": "5.52.0",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
     "@willbooster/eslint-config-ts": "10.0.8",
     "@willbooster/prettier-config": "9.1.1",
     "@willbooster/renovate-config": "9.5.0",
