--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@willbooster/shared-lib": "4.0.3",
     "deepmerge": "4.3.1",
     "dotenv": "16.3.1",
+    "fastest-levenshtein": "1.0.16",
     "globby": "13.2.2",
     "js-yaml": "4.1.0",
     "libsodium-wrappers": "0.7.13",
