--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,1 +1,1 @@
-{ "root": true, "extends": ["@willbooster/eslint-config-ts"], "env": { "node": true } }
+{ "root": true, "extends": ["@willbooster/eslint-config-ts"] }
