--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
   "dependencies": {
     "@octokit/core": "6.1.3",
     "@willbooster/shared-lib": "5.2.8",
+    "@willbooster/shared-lib-node": "6.0.6",
     "deepmerge": "4.3.1",
     "dotenv": "16.4.7",
+    "fast-glob": "3.3.3",
     "fastest-levenshtein": "1.0.16",
-    "globby": "14.0.2",
     "js-yaml": "4.1.0",
     "libsodium-wrappers": "0.7.15",
     "lodash.clonedeep": "4.5.0",
