--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   ],
   "scripts": {
     "build": "build-ts app",
-    "check-for-ai": "yarn install > /dev/null && yarn format > /dev/null && yarn lint-fix --quiet && yarn typecheck && yarn test --silent",
+    "check-all-for-ai": "yarn check-for-ai && yarn test --silent",
+    "check-for-ai": "yarn install > /dev/null && yarn format > /dev/null && yarn lint-fix --quiet && yarn typecheck",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
-    "postinstall": "husky install",
+    "postinstall": "husky || true",
     "lint": "eslint --color",
     "lint-fix": "yarn lint --fix",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
+    "prepare": "husky || true",
     "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,js,json,json5,jsonc,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test{-,/}fixtures/**\"",
     "release": "yarn build && semantic-release",
     "start": "build-ts run src/index.ts --env .env --",
@@ -60,7 +62,7 @@
     "@yarnpkg/core": "4.4.2",
     "build-ts": "15.0.6",
     "conventional-changelog-conventionalcommits": "9.0.0",
-    "eslint": "9.29.0",
+    "eslint": "9.30.0",
     "eslint-config-flat-gitignore": "2.1.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-import-resolver-typescript": "4.4.4",
@@ -70,11 +72,11 @@
     "eslint-plugin-unicorn": "59.0.1",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.2.0",
-    "husky": "^8.0.0",
+    "husky": "9.1.7",
     "jest": "30.0.3",
     "lint-staged": "16.1.2",
     "micromatch": "4.0.8",
-    "pinst": "^3.0.0",
+    "pinst": "3.0.0",
     "prettier": "3.6.2",
     "prettier-plugin-java": "2.6.8",
     "semantic-release": "24.2.5",
