--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
     "prepare": "husky || true",
-    "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,js,json,json5,jsonc,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test{-,/}fixtures/**\"",
+    "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,java,js,json,json5,jsonc,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test{-,/}fixtures/**\"",
     "release": "yarn build && semantic-release",
     "start": "build-ts run src/index.ts --env .env --",
     "start-prod": "yarn build && yarn wbfy",
@@ -34,8 +34,8 @@
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
     "@octokit/core": "7.0.2",
-    "@willbooster/shared-lib": "5.4.4",
-    "@willbooster/shared-lib-node": "6.2.5",
+    "@willbooster/shared-lib": "6.0.0",
+    "@willbooster/shared-lib-node": "7.0.0",
     "deepmerge": "4.3.1",
     "dotenv": "17.0.0",
     "fast-glob": "3.3.3",
@@ -49,18 +49,18 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "@types/eslint": "8.56.11",
+    "@types/eslint": "9.6.1",
     "@types/jest": "30.0.0",
     "@types/js-yaml": "4.0.9",
     "@types/libsodium-wrappers": "0.7.14",
     "@types/lodash.clonedeep": "4.5.9",
     "@types/micromatch": "4.0.9",
-    "@types/node": "22.15.34",
+    "@types/node": "24.0.8",
     "@types/yargs": "17.0.33",
-    "@willbooster/eslint-config-ts": "11.3.4",
-    "@willbooster/prettier-config": "10.1.3",
+    "@willbooster/eslint-config-ts": "11.4.0",
+    "@willbooster/prettier-config": "10.2.0",
     "@yarnpkg/core": "4.4.2",
-    "build-ts": "15.0.8",
+    "build-ts": "15.0.9",
     "conventional-changelog-conventionalcommits": "9.0.0",
     "eslint": "9.30.0",
     "eslint-config-flat-gitignore": "2.1.0",
@@ -71,20 +71,20 @@
     "eslint-plugin-sort-destructure-keys": "2.0.0",
     "eslint-plugin-unicorn": "59.0.1",
     "eslint-plugin-unused-imports": "4.1.4",
-    "globals": "16.2.0",
+    "globals": "16.3.0",
     "husky": "9.1.7",
     "jest": "30.0.3",
     "lint-staged": "16.1.2",
     "micromatch": "4.0.8",
     "pinst": "3.0.0",
     "prettier": "3.6.2",
-    "prettier-plugin-java": "2.6.8",
-    "semantic-release": "24.2.5",
+    "prettier-plugin-java": "2.7.1",
+    "semantic-release": "24.2.6",
     "sort-package-json": "3.3.1",
     "ts-node": "10.9.2",
     "type-fest": "4.41.0",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.35.0",
+    "typescript-eslint": "8.35.1",
     "vitest": "3.2.4"
   },
   "packageManager": "yarn@4.9.2",
