--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,1 @@
-{
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>WillBooster/willbooster-configs:renovate.json5"]
-}
+{"$schema":"https://docs.renovatebot.com/renovate-schema.json","extends":["github>WillBooster/willbooster-configs:renovate.json5"]}
