--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,1 +1,17 @@
-{"branches":["main"],"plugins":[["@semantic-release/commit-analyzer",{"preset":"conventionalcommits"}],"@semantic-release/release-notes-generator","@semantic-release/npm",["@semantic-release/github",{"labels":["r: semantic-release"],"releasedLabels":["released :bookmark:"],"successCommentCondition":false,"failCommentCondition":false}]]}
+{
+  "branches": ["main"],
+  "plugins": [
+    ["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
+    [
+      "@semantic-release/github",
+      {
+        "labels": ["r: semantic-release"],
+        "releasedLabels": ["released :bookmark:"],
+        "successCommentCondition": false,
+        "failCommentCondition": false
+      }
+    ]
+  ]
+}
