--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "check-for-ai": "yarn install > /dev/null && yarn format > /dev/null 2> /dev/null || true && yarn lint-fix --quiet && yarn typecheck",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
-    "postinstall": "husky install",
     "lint": "eslint --color",
     "lint-fix": "yarn lint --fix",
-    "prepack": "pinst --disable",
-    "postpack": "pinst --enable",
     "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,java,js,json,json5,jsonc,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test{-,/}fixtures/**\" || true",
     "release": "yarn build && semantic-release",
     "start": "build-ts run src/index.ts --env .env --",
     "start-prod": "yarn build && yarn wbfy",
     "test": "vitest test",
     "test/ci-setup": "cd .. && pwd && rm -Rf test-fixtures-for-wbfy && git clone https://github.com/WillBooster/test-fixtures-for-wbfy.git",
-    "typecheck": "tsc --noEmit --Pretty"
+    "typecheck": "tsc --noEmit --Pretty",
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
