--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "check-for-ai": "yarn install > /dev/null && yarn format > /dev/null 2> /dev/null || true && yarn lint-fix --quiet && yarn typecheck",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
+    "postinstall": "husky || true",
     "lint": "eslint --color",
     "lint-fix": "yarn lint --fix",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
+    "prepare": "husky || true",
     "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,java,js,json,json5,jsonc,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test{-,/}fixtures/**\" || true",
     "release": "yarn build && semantic-release",
     "start": "build-ts run src/index.ts --env .env --",
     "start-prod": "yarn build && yarn wbfy",
     "test": "vitest test",
     "test/ci-setup": "cd .. && pwd && rm -Rf test-fixtures-for-wbfy && git clone https://github.com/WillBooster/test-fixtures-for-wbfy.git",
-    "typecheck": "tsc --noEmit --Pretty",
-    "postinstall": "husky install",
-    "prepack": "pinst --disable",
-    "postpack": "pinst --enable"
+    "typecheck": "tsc --noEmit --Pretty"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
@@ -71,11 +72,11 @@
     "eslint-plugin-unicorn": "60.0.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.3.0",
-    "husky": "^8.0.0",
+    "husky": "9.1.7",
     "jest": "30.0.5",
-    "lint-staged": "16.1.2",
+    "lint-staged": "16.1.4",
     "micromatch": "4.0.8",
-    "pinst": "^3.0.0",
+    "pinst": "3.0.0",
     "prettier": "3.6.2",
     "prettier-plugin-java": "2.7.4",
     "semantic-release": "24.2.7",
@@ -83,7 +84,7 @@
     "ts-node": "10.9.2",
     "type-fest": "4.41.0",
     "typescript": "5.9.2",
-    "typescript-eslint": "8.38.0",
+    "typescript-eslint": "8.39.0",
     "vitest": "3.2.4"
   },
   "packageManager": "yarn@4.9.2",
