--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,16 @@
 !.keep
 .aider*
 .env.production
+*/mount/*.hash
+.devcontainer/
 .idea/AugmentWebviewStateStore.xml
 .idea/copilot/chatSessions/
-.devcontainer/
-*/mount/*.hash
+.serena/
+.tmp/
 __generated__/
 dist/
 temp/
 tmp/
-.tmp/
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows
@@ -57,7 +58,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
