--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "check-for-ai": "yarn install > /dev/null && yarn format > /dev/null 2> /dev/null || true && yarn lint-fix --quiet && yarn typecheck",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
-    "postinstall": "husky install",
+    "postinstall": "husky || true",
     "lint": "eslint --color",
     "lint-fix": "yarn lint --fix",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
+    "prepare": "husky || true",
     "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,java,js,json,json5,jsonc,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test{-,/}fixtures/**\" || true",
     "release": "yarn build && semantic-release",
     "start": "build-ts run src/index.ts --env .env --",
