--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: false
 permissions:
+  id-token: write
   contents: write
 jobs:
   release:
