--- a/package.json
+++ b/package.json
@@ -17,12 +17,9 @@
     "check-for-ai": "yarn install > /dev/null && yarn format > /dev/null 2> /dev/null || true && yarn typecheck && yarn lint-fix --quiet",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
-    "postinstall": "husky || true",
     "lint": "eslint --color",
     "lint-fix": "yarn lint --fix",
-    "prepack": "pinst --disable",
-    "postpack": "pinst --enable",
-    "prepare": "husky || true",
+    "prepare": "lefthook install || true",
     "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,java,js,json,json5,jsonc,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test{-,/}fixtures/**\" || true",
     "release": "yarn build && semantic-release",
     "start": "build-ts run src/index.ts --env .env --",
@@ -72,12 +69,11 @@
     "eslint-plugin-sort-destructure-keys": "2.0.0",
     "eslint-plugin-unicorn": "62.0.0",
     "eslint-plugin-unused-imports": "4.3.0",
-    "globals": "16.5.0",
-    "husky": "9.1.7",
+    "globals": "17.0.0",
     "jest": "30.2.0",
+    "lefthook": "2.0.13",
     "lint-staged": "16.2.7",
     "micromatch": "4.0.8",
-    "pinst": "3.0.0",
     "prettier": "3.7.4",
     "prettier-plugin-java": "2.7.7",
     "semantic-release": "25.0.2",
