--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,7 +6,7 @@ pre-commit:
   commands:
     cleanup:
       glob: '*.{cjs,css,cts,htm,html,js,json,json5,jsonc,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}'
-      run: bun --bun wb lint --fix --format {staged_files} && git add {staged_files}
+      run: yarn run cleanup && git add {staged_files}
     check-migrations:
       glob: '**/migration.sql'
       run: |-
